--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:h2:~/database
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=h2
+spring.datasource.password=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
